Change Cost and Financial Return to correct order of 10

--- a/endowmentcalc.html
+++ b/endowmentcalc.html
@@ -68,7 +68,7 @@
               <span class="col-md-1"></span>
               <span class="badge col-md-1" data-toggle="modal" data-target="#myModal">?</span>
               <span class="col-md-1"></span>
-              <div class="input-group">
+              <div class="input-group" data-container="body">
                 <input class="slider" data-slider-max="100" data-slider-min="0" data-slider-value="25" type="text" id="simp">
                   <div class="slider-horizontal" />
                   <div class="slider-track">
@@ -131,8 +131,8 @@
               <span class="col-md-1"></span>
               <span class="badge col-md-1" data-toggle="modal" data-target="#myModal">?</span>
               <span class="col-md-1"></span>
-              <div class="input-group">
-                <input class="slider" data-slider-max="100" data-slider-min="0" data-slider-value="25" type="text" id="simp2">
+              <div class="input-group" data-container="body">
+                <input class="slider" data-slider-max="100" data-slider-min="0" data-slider-value="25"  type="text" id="simp2">
                   <div class="slider-horizontal" >
                     <div class="slider-track"></div>
                   </div>
